# study-migration-tool

./: .gitignore  CONTRIBUTIONS.md  README.md  app.py  config.py  logger.py  pyproject.toml  requirements.txt  utils.py
assets/: dash.css
assets/sandstone/: bootstrap.css
data/: clean_input_data_reduced - v2.csv  clean_input_data_reduced - v2.xlsx  input_data.csv
src/: data_processing.py
tests/: test_app.py  test_data_processing.py  test_utils.py
tests/data/: test-data-1-eu.csv  test-data-1-eu.xlsx  test-data-2-us.csv  test-data-3-iso.csv  test-data-3-iso.xlsx
tests/data/dataframes/: PYT10[Multiple Custom Filters].json  PYT10[Same Timeframe And Milestones].json  PYT10[Single Custom Filter].json  PYT10[Updated Milestones].json  PYT10[Updated Timeframe Start And End].json  PYT14[Daily With Filters]_config.json  PYT14[Daily With Filters]_migration.json  PYT14[Daily Without Filters]_config.json  PYT14[Daily Without Filters]_migration.json  PYT14[Weekly With Filters]_config.json  PYT14[Weekly With Filters]_migration.json  PYT14[Weekly Without Filters]_config.json  PYT14[Weekly Without Filters]_migration.json  PYT39[Daily With Filters].json  PYT39[Daily Without Filters].json  PYT39[Weekly With Filters].json  PYT39[Weekly Without Filters].json  PYT9.json
