[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Study Migration Tool"
version = "2.5.3"
authors = [
  { name="Jonathan Deacon", email="jonathan.deacon@achieveintelligence.com" },
  { name="William McDermott", email="will.mcdermott@achieveintelligence.com" },
]
description = "The Study Migration Tool is a standalone Python web application that generates tables and visualisations from pre-existing study milestone data for analysis and migration scheduling."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash==2.7.0",
    "numpy==1.24.3",
    "plotly==5.14.1",
    "pytest==6.2.5",
    "dash_bootstrap_templates==1.0.7",
    "dash_bootstrap_components==1.3.0",
    "pandas==1.3.3",
    "Werkzeug==2.3.3",
    "Flask==2.3.2",
    "openpyxl==3.1.2",
    "cryptography==41.0.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Framework :: Pytest",
    "Topic :: Clinical Study Migration :: Plotly-Dash"
]

[project.urls]
"Homepage" = "https://github.com/open-sce/study-migration-tool"
